@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2010-01-01  Michael Jahn
+	* [#501526] Error in export GCStar/DVDProfilerXMLExportV2/3
+
 2009-12-28  Michael Jahn
 	* updated movie plugin Allocine, Amazon, FilmDb
 	* updated import plugin CSV
